--- a/templates/profiled.conf.erb
+++ b/templates/profiled.conf.erb
@@ -1,2 +1,2 @@
-export PATH=$PATH:<%= torque::params::install_dist %>/bin:/opt/torque/sbin
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:<%= torque::params::install_dist %>/lib
+export PATH=$PATH:<%= scope.function_extlookup(['torque_install_dist']) %>/bin:/opt/torque/sbin
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:<%= scope.function_extlookup(['torque_install_dist']) %>/lib
